change: lower margins on nav to prevent the links text from wrapping
add: style the initial layout for the circle ad banner

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --Dark-Header-Text: #333333;
   --section-header-size: 1.8rem;
   --section-header-padding: 1.3rem;
+  --red-header-text: #cc0000;
 }
 
 h1,
