--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -7,7 +7,7 @@
 
 .nav-shopping {
   gap: 0.8rem;
-  padding: 1.1rem 17.3rem;
+  padding: 1.1rem 16.3rem;
   position: sticky;
   box-shadow: rgba(0, 0, 0, 0.04) 0px -1px 2px, rgba(0, 0, 0, 0.04) 0px 1px 2px,
     rgba(0, 0, 0, 0.04) 0px 3px 4px;
@@ -37,6 +37,7 @@
   text-decoration: none;
   padding: 0.8rem 0.9rem;
   border-radius: 6px;
+  /* text-wrap: nowrap; */
 }
 
 .nav-shopping a:hover {
